- 0.1.16
	* Queue list cli tool
	* Provide pluggable renderer capability for queue list cli tool
	* Move path and state query parsing to settings module
	* Add queue path and digest parameters to base config
- 0.1.15
	* Upgrade shep to avoid sync in persist set
- 0.1.14
	* Upgrade shep to handle exception in filestore list
- 0.1.13
	* Remove sync on each get
	* Upgrade shep to guarantee atomic state lock state
- 0.1.12
	* Raise correct exception from index store exists check
- 0.1.11
	* Allow for sync skip in store instantiation
- 0.1.10
	* Improve logging
- 0.1.9
	* Upgrade deps
- 0.1.8
	* Upgrade deps
- 0.1.7 
	* Improve logging
- 0.1.6
	* Sort upcoming queue item chronologically
	* Add unit testing for upcoming query method
- 0.1.5
	* Add reserved state check method
- 0.1.4
	* Dependency cleanups
- 0.1.3
	* Add CLI args and config handling, settings object
- 0.1.2
	* Add CLI inspection tools
- 0.1.1
	* 
- 0.1.0
	* Replace state transitions with shep
- 0.0.3
	* cli tool for listing queue by address
	* ensure lowercase hex input in db
	* exportable unittest utilities
- 0.0.2
	* add fs backend
	* add flexible data directory
	* factor out sql backend as module
- 0.0.1 (unreleased)
	* add queue states
	* add queries
	* add tx creation helper