@@ -35,6 +35,7 @@ packages =
 	chainqueue.runnable
 	chainqueue.cli
 
-#[options.entry_points]
-#console_scripts =
-#	chainqueue-list = chainqueue.runnable.list:main
+[options.entry_points]
+console_scripts =
+	chainqueue-list = chainqueue.runnable.list:main
+	chainqueue-state = chainqueue.runnable.state:main
